Finalized payment gateway

--- a/templates/pay_bkash.html
+++ b/templates/pay_bkash.html
@@ -25,9 +25,8 @@
     bKash.init({
         paymentMode: 'checkout', //fixed value ‘checkout’
 
-
         paymentRequest: {
-            amount: 1500,
+            amount: {{ amount }},
             intent: 'sale'
         },
         createRequest: function (request) {
